--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
         </nav>
 
     <div class="content">
-    <h1>Hi, I am Sai Anish, a passionate web developer and technologu enthusiast. I enjoy creating websites and learning new web technologies.</h1>
+    <h1>Hi, I am Abhi Ram, a passionate web developer and technology enthusiast. I enjoy creating websites and learning new web technologies.</h1>
     </h1>
     <h2 style="color: #337ab7;">Hobbies</h2>
     <ul>
