--- a/contact.html
+++ b/contact.html
@@ -32,10 +32,10 @@
     <div class="content">
     <h1>You can reach me via email or connect with me on social media:</h1>
         <ul style="color: #337ab7;">
-            Email: <a href="mailto:abhiramepuri22@gmail.com">govindusaianish@gmail.com</a> <br/>
-            LinkedIn: <a href="https://www.linkedin.com">linkedin.com/sai-anish</a><br/>
+            Email: <a href="mailto:abhiramepuri22@gmail.com"></a> <br/>
+            LinkedIn: <a href="https://www.linkedin.com"</a><br/>
             GitHub: <a href="">github.com/abhi-0411</a><br/>
-            Contact: <a href="number">+91 738*****43</a>
+            Contact: <a href="number">+91 9030196656</a>
         </ul>
     </p>
     </div>
